@@ -3,12 +3,12 @@ use Data::Dumper;
 use DBI();
 
 $print_header = 1;
-$PROGID       = '$Id: poll.pl,v 1.4 2004/01/07 12:33:15 blytkerchan Exp $';
-$base_url     = 'poll.pl';
+$base_url     = '/cgi-bin/poll.pl';
 $db_database  = 'jail';
 $db_host      = 'localhost';
 $db_username  = 'ronald';
 $db_password  = '770217104';
+$PROGID       = '$Id: poll.pl,v 1.5 2004/01/07 13:45:03 blytkerchan Exp $';
 
 sub connect_database()
 {
@@ -22,7 +22,7 @@ sub output_header()
 	print "Content-Type: text/html;\n" if ($print_header);
 	print "\n" if ($print_header);
 	print "<html>\n<!-- Generated by $PROGID -->\n";
-	print "<link rel=stylesheet href=\"poll.css\" type=\"text/css\"/>\n";
+	print "<link rel=stylesheet href=\"/poll.css\" type=\"text/css\"/>\n";
 	print "<body>\n";
 }
 
@@ -60,18 +60,19 @@ sub fetch_question()
 		{
 			push @examples, $$val{example};
 		}
+		$retval{examples} = \@examples;
 	}
 	if ($$question{answers})
 	{
 		$sth = $db{dbh}->prepare("SELECT * FROM answers WHERE question_id=\'$question_id\'");
 		$sth->execute();
-		while ($val = %sth->fetchrow_hashref())
+		while ($val = $sth->fetchrow_hashref())
 		{
 			push @answers, $$val{answer};
 			$retval{unique_answer} = 1 if ($$val{must_be_unique});
 		}
+		$retval{answers} = \@answers;
 	}
-	$retval{examples} = \@examples;
 
 	return %retval;
 }
@@ -103,11 +104,11 @@ sub output_body()
 		$arrayref = $question{answers};
 		if ($question{unique_answer})
 		{
-			$template = "<input type=\"radio\" value=\"%s\"/>\n";
+			$template = "<input type=\"radio\"/>%s<br/>\n";
 		}
 		else
 		{
-			$template = "<input type=\"checkbox\" value=\"%s\"/>\n";
+			$template = "<input type=\"checkbox\"/>%s<br/>\n";
 		}
 		foreach (@$arrayref)
 		{
